Adding some content from the last WG meeting

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -35,15 +35,11 @@
       <ul class="nav navbar-nav">
         <!--<li class="active"><a href="#">About <span class="sr-only">(current)</span></a></li>-->
         <li><a href="/about/">About Us</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Working Groups <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="/groups/housing/">Housing Justice</a></li>
-            <li><a href="/groups/medicare/">Medicare for All</a></li>
-          </ul>
-        </li>
+        <li><a href="/news/">News</a></li>
+        <li><a href="/resources/">Resources</a></li>
         <li><a href="/calendar/">Calendar</a></li>
-        <li><a href="/join/">Join us</a></li>
+        <li><a href="/ydsa/">CU YDSA</a></li>
+        <li><a href="/contact/">Contact Us</a></li>
       </ul>
       <!-- Social media icons on rhs of navbar?
       <ul class="nav navbar-nav navbar-right">
