--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -27,19 +27,17 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">Boulder DSA</a>
+      <a  href="/"><img src="/images/bdsa_logo_48.png" srcset="/images/bdsa_logo_48@2x.png 2x" alt="Boulder DSA" width="48" height="48"/></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <!--<li class="active"><a href="#">About <span class="sr-only">(current)</span></a></li>-->
-        <li><a href="/about/">About Us</a></li>
-        <li><a href="/news/">News</a></li>
-        <li><a href="/resources/">Resources</a></li>
-        <li><a href="/calendar/">Calendar</a></li>
-        <li><a href="/ydsa/">CU YDSA</a></li>
-        <li><a href="/contact/">Contact Us</a></li>
+        {% for item in site.navlinks %}
+          <li{% if item.url == page.url %} class="active"{% endif %}>
+            <a href="{{ item.url }}">{{ item.title }}{% if item.url == page.url %}<span class="sr-only"> (current)</span>{% endif %}</a>
+        {% endfor %}
       </ul>
       <!-- Social media icons on rhs of navbar?
       <ul class="nav navbar-nav navbar-right">
@@ -50,9 +48,31 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-<div> <!-- main content -->
-{{ content }}
+<div class="container-fluid"> <!-- main content -->
+
+<div class="row">
+  <div class="col-md-12">
+    {{ content }}
+  </div>
+</div>
+
+<hr>
+<footer class="footer">
+  <div class="row">
+  <div class="col-md-4">&copy; 2018 Boulder DSA</div>
+  <div class="col-md-4 text-center"><a href="/contact/"><button class="btn btn-primary btn-sx">Join Us!</button></a></div>
+  <div class="col-md-4 text-right"><ul class="list-inline">
+  {% for site in site.socialmedia %}
+  <li><a href="{{ site.url }}">
+    <img src="/images/socialmedia/{{site.name}}.png" srcset="/images/socialmedia/{{site.name}}@2x.png 2x"
+        alt="{{site.name | capitalize}}"></a></li>
+  {% endfor %}
+  </ul></div>
+  </div>
+</footer>
+
 </div> <!-- end main content -->
+
 
 
 </body>
