--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,6 +6,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{%- if page.exerpt -%}
+  <meta name="description" content="{{ page.exerpt | strip_html | truncate: 320 }}">
+{%- endif -%}
   <title>{{ page.titleprefix }}{{ page.title }}</title>
 
   <link href="/css/main.css" rel="stylesheet">
@@ -34,10 +37,19 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <!--<li class="active"><a href="#">About <span class="sr-only">(current)</span></a></li>-->
-        {% for item in site.navlinks %}
-          <li{% if item.url == page.url %} class="active"{% endif %}>
-            <a href="{{ item.url }}">{{ item.title }}{% if item.url == page.url %}<span class="sr-only"> (current)</span>{% endif %}</a>
-        {% endfor %}
+        {%- for item in site.navlinks -%}
+          {%- comment -%} Jekyll doesn't allow (), but associates logic from r to l.
+                          Also, boolean algebra apparently doesn't work in assign
+                          statements.{%- endcomment -%}
+          {%- if item.url == page.url or page.layout == "news" and item.url == "/news/" -%}
+            {%- assign active = true -%}
+          {%- else -%}
+            {%- assign active = false -%}
+          {%- endif -%}
+          <li{% if active %} class="active"{% endif %}>
+            <a href="{{ item.url }}">{{ item.title }}{% if active %}<span class="sr-only"> (current)</span>{% endif %}</a>
+          </li>
+        {%- endfor -%}
       </ul>
       <!-- Social media icons on rhs of navbar?
       <ul class="nav navbar-nav navbar-right">
@@ -62,11 +74,11 @@
   <div class="col-md-4">&copy; 2018 Boulder DSA</div>
   <div class="col-md-4 text-center"><a href="/contact/"><button class="btn btn-primary btn-sx">Join Us!</button></a></div>
   <div class="col-md-4 text-right"><ul class="list-inline">
-  {% for site in site.socialmedia %}
+  {%- for site in site.socialmedia -%}
   <li><a href="{{ site.url }}">
     <img src="/images/socialmedia/{{site.name}}.png" srcset="/images/socialmedia/{{site.name}}@2x.png 2x"
         alt="{{site.name | capitalize}}"></a></li>
-  {% endfor %}
+  {%- endfor -%}
   </ul></div>
   </div>
 </footer>
