--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -21,7 +21,7 @@
 
 <body>
 <nav class="navbar navbar-inverse">
-  <div class="container-fluid">
+  <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -60,7 +60,7 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-<div class="container-fluid"> <!-- main content -->
+<div class="container"> <!-- main content -->
 
 <div class="row">
   <div class="col-md-12">
