--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,7 +1,8 @@
 ---
+apple-touch-icon-sizes: [57, 72, 76, 114, 120, 144, 152, 180]
 ---
 <!DOCTYPE html>
-<html lang="en">
+<html lang="{{ page.lang | default: site.lang | default: "en" }}">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +11,6 @@
   <meta name="description" content="{{ page.exerpt | strip_html | truncate: 320 }}">
 {%- endif -%}
   <title>{{ page.titleprefix }}{{ page.title }}</title>
-  {% feed_meta %}
 
   <link href="/css/main.css" rel="stylesheet">
 
@@ -18,6 +18,16 @@
   <script src="/js/bootstrap.min.js"></script>
   <!-- https://leaverou.github.io/prefixfree/ -->
   <script src="/js/prefixfree.min.js"></script>
+
+  <link rel="shortcut icon" href="/images/favicons/favicon.ico" type="image/x-icon" />
+  <link rel="apple-touch-icon" href="/images/favicons/apple-touch-icon.png" />
+  {% for size in layout.apple-touch-icon-sizes %}
+  <link rel="apple-touch-icon" sizes="{{ size }}x{{ size }}" href="/images/favicons/apple-touch-icon-{{ size }}x{{ size }}.png" />
+  {%- endfor %}
+
+  {% feed_meta %}
+  
+  {% seo title=false %}
 </head>
 
 <body>
