--- a/_layouts/postlist.html
+++ b/_layouts/postlist.html
@@ -9,7 +9,7 @@ layout: base
   {%- assign postlist = site.posts -%}
 {%- endif -%}
 
-{%- for post in site.posts -%}
+{% for post in site.posts %}
 <div class="row">
   <div class="col-sm-9">
     <h2 class="pull-left"><a href="{{ post.url }}">{{ post.title }}</a></h2>
@@ -22,4 +22,4 @@ layout: base
   <p><a href="{{ post.url }}">Read more&hellip;</a></p>
   </div>
 </div>
-{%- endfor -%}
+{% endfor %}
