Tidying up logo files

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -41,7 +41,7 @@ apple-touch-icon-sizes: [57, 72, 76, 114, 120, 144, 152, 180]
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a  href="/"><img src="/images/bdsa_logo_48.png" srcset="/images/bdsa_logo_48@2x.png 2x" alt="Boulder DSA" width="48" height="48"/></a>
+      <a  href="/"><img src="/images/logos/bdsa_logo_48.png" srcset="/images/logos/bdsa_logo_48@2x.png 2x" alt="Boulder DSA" width="48" height="48"/></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
