Hide inactive social media (Instagram)

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -80,10 +80,12 @@ apple-touch-icon-sizes: [57, 72, 76, 114, 120, 144, 152, 180]
   <div class="col-md-4 col-lg-offset-1">&copy; 2018 Boulder DSA</div>
   <div class="col-md-4 col-lg-2 text-center"><a href="/contact/"><button class="btn btn-primary btn-lg">Join Us!</button></a></div>
   <div class="col-md-4 text-right"><ul class="list-inline">
-  {% for site in site.socialmedia %}
+  {%- for site in site.socialmedia -%}
+  {%- if site.url %}
   <li><a href="{{ site.url }}">
     <img src="/images/socialmedia/{{site.name}}.png" srcset="/images/socialmedia/{{site.name}}@2x.png 2x"
         alt="{{site.name | capitalize}}"></a></li>
+  {%- endif -%}
   {%- endfor %}
   </ul></div>
   </div>
