--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -84,7 +84,7 @@ apple-touch-icon-sizes: [57, 72, 76, 114, 120, 144, 152, 180]
 <footer class="footer">
   <div class="row">
   <div class="col-md-4 col-lg-offset-1">&copy; 2018 Boulder DSA</div>
-  <div class="col-md-4 col-lg-2 text-center"><a href="/contact/"><button class="btn btn-primary btn-lg">Join Us!</button></a></div>
+  <div class="col-md-4 col-lg-2 text-center"><a href="/join/"><button class="btn btn-primary btn-lg">Join Us!</button></a></div>
   <div class="col-md-4 text-right"><ul class="list-inline">
   {%- for site in site.socialmedia -%}
   {%- if site.url %}
